Fix platform specific logos spacing

--- a/css/style.css
+++ b/css/style.css
@@ -508,3 +508,8 @@ fieldset .fieldset-wrapper .js-form-item label
 {
   margin-left: 1em;
 }
+
+.platform-specific-logos div.content
+{
+  padding-right: 1em;
+}
